# m1nd

./: .dockerignore  .gitignore  AUTO_GUI_REPORT.md  AWESOME_RUST_SUBMISSION.md  BUILD_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT-MESSAGE.md  COMMUNITY-PLAN.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  DISCORD_COMMUNITIES.md  DOCS_FIX_REPORT.md  Dockerfile  EMBEDDINGS_SEARCH_REPORT.md  EXAMPLES.md  FINAL-REPORT.md  INGEST_IMPROVEMENTS_RESEARCH.md  INGEST_MATH_AND_OPTIMIZATION.md  INTEGRATION-GUIDE.md  LANDING-PAGE.md  LAUNCH_DEVTO.md  LAUNCH_HN.md  LAUNCH_MEDIUM_COMMENT.md  LAUNCH_REDDIT.md  LAUNCH_REDDIT_V2.md  LAUNCH_TWEET.md  M1ND_CAPABILITIES_AND_CROSS_TOOLING.md  M1ND_EMPIRICAL_PROOF.md  M1ND_SELF_AUDIT_REPORT.md  M1ND_STRESS_TEST_SOUNDMAP_REPORT.md  PRODUCT-STRATEGY.md  README-DE.md  README-ES.md  README-PT-BR.md  README-ZH.md  README.de.md  README.es.md  README.fr.md  (+36 more)
.agents/workflows/: temponizer.md
.github/: FUNDING.yml  PLANNED_ISSUES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/wiki/: API-Reference.md  Architecture.md  Domain-Presets.md  FAQ.md  Getting-Started.md  Home.md  Ingest-Adapters.md  Roadmap.md  Use-Cases.md  VERIFICATION_REPORT.md
.github/workflows/: ci.yml  codeql.yml  deploy-wiki.yml  release.yml
docs/: AGENT-TASKNOTES.md  BENCHMARK_HARNESS_SPEC_2026-03-24.md  BENCHMARK_PATCH_PLAN_2026-03-24.md  BENCHMARK_RESEARCH_2026-03-24.md  CNAME  CORTEX_ONDA1_CONTRACTS.md  CORTEX_V04_ADVERSARY.md  CORTEX_V04_BUILD.md  CORTEX_V04_VISION.md  IDE-INTEGRATIONS.md  L1GHT-DESIGN-SYSTEM-USAGE.md  LANDING_COPY_V0_6_1.md  MULTI_INSTANCE_COMMAND_CENTER_2026-04-11.md  OPENCLAW-NATIVE-FASTPATH.md  README.md  README_VISUAL_REVIEW_2026-04-10.md  README_VISUAL_SYSTEM_2026-04-10.md  SURGICAL_BUILD_REPORT.md  SURGICAL_CONTEXT_CONTRACTS.md  SURGICAL_V2_BUILD_REPORT.md  deployment.md  index.html  use-cases.md
docs/benchmarks/: BENCHMARK_HARNESS_SPEC_2026-03-24.md  README.md
docs/de/: index.html
docs/es/: index.html
docs/fr/: index.html
docs/internal/: CORTEX_ONDA1_ADVERSARY.md  CORTEX_ONDA1_CONTRACTS.md  CORTEX_V04_ADVERSARY.md  CORTEX_V04_BUILD.md  CORTEX_V04_CONTRACTS.md  CORTEX_V04_SYNTHESIS.md  CORTEX_V04_TESTS.md  CORTEX_V04_VISION.md  M1ND-MAJOR-UPDATE-WORKFLOW.md  OPENCLAW-NATIVE-FASTPATH.md  README.md  README_VISUAL_REVIEW_2026-04-10.md  README_VISUAL_SYSTEM_2026-04-10.md  SURGICAL_BUILD_REPORT.md  SURGICAL_CONTEXT_CONTRACTS.md  SURGICAL_CONTEXT_HARDENING.md  SURGICAL_V2_BUILD_REPORT.md  SURGICAL_V2_CONTRACTS.md  TRAY_AND_COMMAND_CENTER_GROUNDING_2026-04-11.md
docs/it/: index.html
docs/pt-br/: index.html
docs/ultra-edit/: 00-overview.md  01-adversary.md  02-contracts.md  03-tests.md  07-semantic-targeting.md
docs/wiki-build/: 404.html  architecture.html  benchmarks.html  changelog.html  faq.html  index.html  introduction.html  l1ght.html  patterns.html  print.html  quickstart.html  searcher-c2a407aa.js  searchindex-1c1b5857.js  searchindex-22b077a7.js  searchindex-66fbf10c.js  searchindex-71adba98.js  searchindex-7447e1d8.js  searchindex-89b4da9f.js  searchindex-9ca9b29a.js  toc-a37108d1.js  (+3 more)
i18n/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.pt-BR.md  README.zh.md
m1nd-core/: Cargo.toml
m1nd-core/benches/: core_benchmarks.rs
m1nd-core/src/: activation.rs  antibody.rs  atomic_write.rs  builder.rs  counterfactual.rs  domain.rs  epidemic.rs  error.rs  flow.rs  git_history.rs  graph.rs  layer.rs  lib.rs  plasticity.rs  query.rs  refactor.rs  resonance.rs  runtime_overlay.rs  seed.rs  semantic.rs  snapshot.rs  snapshot_bin.rs  taint.rs  temporal.rs  topology.rs  tremor.rs  trust.rs  twins.rs  types.rs  xlr.rs
m1nd-core/tests/: retrobuilder_real.rs  retrobuilder_stress.rs
m1nd-demo/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
m1nd-ingest/: Cargo.toml
m1nd-ingest/src/: bibtex_adapter.rs  canonical.rs  cargo_workspace.rs  cross_domain.rs  cross_file.rs  crossref_adapter.rs  diff.rs  document_router.rs  jats_adapter.rs  json_adapter.rs  l1ght_adapter.rs  lib.rs  memory_adapter.rs  merge.rs  patent_adapter.rs  resolve.rs  rfc_adapter.rs  universal_adapter.rs  walker.rs
m1nd-ingest/src/extract/: generic.rs  go.rs  java.rs  mod.rs  python.rs  rust_lang.rs  tree_sitter_ext.rs  typescript.rs
m1nd-ingest/tests/: connectome_integration.rs  jats_integration.rs
m1nd-mcp/: Cargo.toml  build.rs
m1nd-mcp/src/: audit_handlers.rs  auto_ingest.rs  boot_memory_handlers.rs  brand.rs  cli.rs  daemon_handlers.rs  engine_ops.rs  help_guidance.rs  http_server.rs  instance_registry.rs  layer_handlers.rs  lib.rs  lock_handlers.rs  main.rs  persist_handlers.rs  personality.rs  perspective_handlers.rs  report_handlers.rs  result_shaping.rs  scope.rs  search_handlers.rs  server.rs  session.rs  surgical_handlers.rs  tools.rs  universal_docs.rs
m1nd-mcp/src/perspective/: confidence.rs  keys.rs  mod.rs  peek_security.rs  state.rs  validation.rs
m1nd-mcp/src/protocol/: auto_ingest.rs  core.rs  layers.rs  lock.rs  mod.rs  perspective.rs  surgical.rs
m1nd-mcp/tests/: perspective_golden.rs  perspective_suggest_affinity.rs  test_auto_ingest.rs  test_edit_preview.rs  test_surgical.rs  test_surgical_v2.rs  test_v04.rs
m1nd-mcp/ui-dist/: index.html
m1nd-mcp/ui-dist/assets/: index-BZmV0Asw.js  index-CRk98BBL.css  index-Cym3Qbxj.js
m1nd-openclaw/: Cargo.toml
m1nd-openclaw/src/: client.rs  main.rs
m1nd-ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
m1nd-viz/: .gitignore  API_REFERENCE.md  INTEGRATION_REPORT.md  STORYBOARD.md  VIDEO_PROMPTS.md  generate_clips.py  package.json  tsconfig.json  vite.config.ts
wiki-build/: 404.html  benchmarks.html  changelog.html  faq.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-0ac2aef0.js  searchindex-177e4674.js  searchindex-32e1bda5.js  searchindex-439f79f2.js  searchindex-66ca2934.js  searchindex-def10045.js  toc-0a73bcc5.js  toc-f77fd02f.js  toc.html  tool-matrix.html
(+342 files in other folders)
