[package]
name = "m1nd-core"
version = "0.6.1"
edition = "2021"
description = "Core graph engine and reasoning primitives for m1nd."
license = "MIT"
repository = "https://github.com/maxkle1nz/m1nd"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
static_assertions = { workspace = true }
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false
