[package]
name = "m1nd-ingest"
version = "0.1.0"
edition = "2021"

[features]
default = ["tier2"]
tier1 = [
    "dep:tree-sitter",
    "dep:tree-sitter-language",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-php",
    "dep:tree-sitter-swift",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-scala",
    "dep:tree-sitter-bash",
    "dep:tree-sitter-lua",
    "dep:tree-sitter-r",
    "dep:tree-sitter-html",
    "dep:tree-sitter-css",
    "dep:tree-sitter-json",
]
tier2 = [
    "tier1",
    "dep:tree-sitter-elixir",
    "dep:tree-sitter-dart",
    "dep:tree-sitter-zig",
    "dep:tree-sitter-haskell",
    "dep:tree-sitter-ocaml",
    "dep:tree-sitter-toml-ng",
    "dep:tree-sitter-yaml",
    "dep:tree-sitter-sequel",
]

[dependencies]
m1nd-core = { path = "../m1nd-core" }
regex = "1"
walkdir = "2"
rayon = "1.10"
serde_json = { workspace = true }

# Tree-sitter core (0.25 — all grammar crates must use new-API via tree-sitter-language)
tree-sitter = { version = "0.26", optional = true }
tree-sitter-language = { version = "0.1", optional = true }

# Tier 1 grammars (14 languages)
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-scala = { version = "0.25", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-r = { version = "1.2", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.24", optional = true }

# Tier 2 grammars (8 languages — new-API crates only, no old tree-sitter deps)
# IMPORTANT: ALL grammar crates MUST depend on tree-sitter-language, NOT old tree-sitter.
# Old tree-sitter deps (0.19/0.20) compile a separate C runtime whose symbols collide
# with the main tree-sitter 0.25 runtime, causing parse() to return None.
# DROPPED: Dockerfile (tree-sitter-dockerfile 0.2 depends on tree-sitter 0.20)
# REPLACED: tree-sitter-toml -> tree-sitter-toml-ng (new API, same grammar)
# REPLACED: tree-sitter-sql -> tree-sitter-sequel (new API, same grammar)
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-dart = { version = "0.1", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-ocaml = { version = "0.24", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-sequel = { version = "0.3", optional = true }

[lints]
workspace = true
