[package]
name = "m1nd-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
m1nd-core = { path = "../m1nd-core" }
m1nd-ingest = { path = "../m1nd-ingest" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "signal"] }

[[bin]]
name = "m1nd-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
