[package]
name = "m1nd-mcp"
version = "0.8.0"
edition = "2021"
description = "MCP Server for m1nd. Stop letting AI grep your codebase. Neuro-symbolic connectome for AI agents."
license = "MIT"
repository = "https://github.com/maxkle1nz/m1nd"

[features]
default = ["serve"]
serve = ["dep:axum", "dep:tower-http", "dep:rust-embed", "dep:mime_guess", "dep:tokio-stream", "dep:futures", "dep:reqwest"]

[dependencies]
m1nd-core = { path = "../m1nd-core", version = "0.8.0" }
m1nd-ingest = { path = "../m1nd-ingest", version = "0.8.0" }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "signal", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
glob = "0.3"
notify = "8.2"

# HTTP server (behind "serve" feature)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"], optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[[bin]]
name = "m1nd-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
tokio-test = "0.4"
